// ***********************
//  Euskalbar - CHANGELOG
// ***********************

2.2 bertsioa
================
- Intza proiektuko lokuzioak kontsultatzeko botoia gehitu zaio barrari.
- Sinonimoen hiztegiak gehitu zaizkio barrari.
- Barrako zenbait hiztegi erakutsi eta ezkutatzeko aukera sortu da. (#6)
- Azalak sortu dira. (#14)
- Estatistika lokalak sortu dira. (#4)
- Estatistika lokalak ezabatzeko botoi bat gehitu zaio estatistiken leihoari (#23)
- 3000ren azpisarrerak kontsultatzean zegoen arazoa konpondu da. (#18)
- Elhuyarren azpisarrerak kontsultatzean azentu markekin zegoen arazoa konpondu da. (#13)
- Open-Tran hiztegiak fitxak berrerabiltzeko zuen arazoa konpodu da. (#12)
- Hizkuntza hautatzeko botoiaren itxura aldatu da.
- Aukera berria: Shift eta Ktrl kontsultetarako denbora-muga aldatu egin daiteke.
- Morris kontsultaren letra-tipoa aldatu egin da, gainerako kontsulten letra-tipo bera eduki dezan.
- Hiztegien menuko hiztegiek fitxen hobespenak errespetatzen dituzte zabaltzean. (#16)
- Aldaketak hiztegien menuan:
  + Poloniera - Euskara hiztegia gehitu da.
  + Japoniera - Euskara hiztegia gehitu da.


2.1 bertsioa
================
- Abiaratzean ezarritako hiztegien akats bat zuzendu da (jatorrizko hizkuntza eu zenean).
- Fitxak atzeko planoan zabaltzeko aukera gehitu da.
- Aukeratutako testu baten gainean kontsultak egiteko aukera gehitu da Euskalbar osoa eskuin-klik batean eskuragarri izanik. (#8)
- Eurovoc Thesaurusa kontsulta daiteke. (#7)
- Open-tran.eu kontsulta daiteke, en-eu norabidean. (#10)
- Aldaketak hiztegien menuan:
  + BFAren Hiztegi Terminologikoa gehitu da.
  + Eurovoc Tesaurusa gehitu da.
  + Open-tran.eu itzulpen datu-basea gehitu da.


1.95 bertsioa (2.0)
=============
- Ingelesa gehitu da kontsultarako hizkuntza gisa.
- Hizkuntza hautatzeko botoia aldatu da.
- Hizkuntza aldatzearekin batera tresna-barrako hiztegiak moldatzen dira.
- Hobespenen leihoa hedatu eta berrantolatu da: lehenetsitako hizkuntza ezar daiteke.