@@ -12,6 +12,10 @@
   <script type="application/x-javascript" src="euskalbarktrl.js"/>
   <script type="application/x-javascript" src="euskalbarstats.js"/>
 
+  <script type="application/x-javascript" src="chrome://global/content/nsTransferable.js"/>
+  <script type="application/x-javascript" src="chrome://global/content/nsDragAndDrop.js"/>
+  <!--script type="application/x-javascript" src="euskalbardragdrop.js"/-->
+
   <!-- Nabigatzailea kargatzean hasieratze funtzioari deitu -->
   <script type="application/x-javascript">
     window.addEventListener("load",  function(e) { euskalbar.startup(); }, false);
