@@ -4,7 +4,7 @@
 
   <meta content="text/html; charset=UTF-8" http-equiv="Content-Type" />
   <meta content="text/css" http-equiv="Content-Style-Type" />
-  <link href="human.css" title="Human" type="text/css" rel="stylesheet" />
+  <link href="oliba.css" title="Human" type="text/css" rel="stylesheet" />
   <title>Euskalbar: hiztegiak</title>
 
 </head>
