@@ -4,6 +4,7 @@
 
 2.2 bertsioa
 ================
+- Ongi etorri leihoa. (#29)
 - Intza proiektuko lokuzioak kontsultatzeko botoia gehitu zaio barrari.
 - Sinonimoen hiztegiak gehitu zaizkio barrari.
 - Barrako zenbait hiztegi erakutsi eta ezkutatzeko aukera sortu da. (#6)
